--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,12 @@
   );
 }
 
+.white-gradient {
+  background: white;
+  background: linear-gradient(-90deg, white 0%, black 100%);
+  background: -webkit-linear-gradient(-90deg, white 0%, black 100%);
+}
+
 .green-pink-gradient {
   background: "#00cea8";
   background: linear-gradient(90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
